# ML-Redes-Densas-Convolucionales

./: create_environment.sh  ej1_student_performance.ipynb  ej3_image_classification.ipynb  pyproject.toml  requirements.txt
model/: best_student_model.keras  last_student_model.keras
